Fix: Remove trailing slash from API URL

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://uyenvu315:proJectConnector@cluster0.8pdkc.mongodb.net/todoDB?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret
 PORT=5000
-VITE_API_URL=https://zentasker-4ear.onrender.com/
+VITE_API_URL=https://zentasker-4ear.onrender.com
